# flight_code

./: CMakeLists.txt  README.md  package.xml
launch/: .2FOF_small_object_test_vicon.launch.swp  .RCsysID_rosbag.launch.swp  .flow_hallway.launch.swp  .full_SO_data_record.launch.swp  .hallway_test.launch.swp  .hallway_test_no_record.launch.swp  .px4_basic.launch.swp  .small_object_test.launch.swp  1FOF_and_Residual_record.launch  2FOF_small_object_test_vicon.launch  3FOF_small_object_test_PX4Flow.launch  FOF_full_record.launch  FOF_only_record.launch  RCsysID_rosbag.launch  example_launch.launch  forward_record_test.launch  full_SO_data_record.launch  hallway_test.launch  hallway_test_no_record.launch  iRobot_record.launch  image_only_record.launch  image_process.launch  image_record.launch  offb_hallway.launch  offb_hallway.launch~  record_yaw_cmd.launch  rosbag_launch.launch  small_object_full.launch  small_object_test.launch  vicon_only_record.launch  vrpn_mavros.launch
launch/past_launchfiles/: FOF_small_object_test.launch  SO_data_record.launch  flow_hallway.launch  full_SO_data_record.launch  hallway_rosbag_only.launch  offb_hallway.launch  record_small_object.launch  rosbag_test.launch  small_object_test.launch  takeoff_record.launch
msg/: AllDataOutMsg.msg  ControllerOutMsg.msg  DSwitchMsg.msg  FOFAllDataOutMsg.msg  YawAngleMsg.msg
src/: .forward_vel_stop_test.cpp.swp  .full_onboard_OF_steering_controller.cpp.swp  .main_flight_controller_working.cpp.swp  .pub_forward_vel.cpp.swo  .pub_forward_vel.cpp.swp  .pub_forward_vel_new.cpp.swo  .pub_forward_vel_new.cpp.swp  .small_object_avoidance.cpp.swp  .small_object_avoidance_PX4Flow.cpp.swo  .small_object_avoidance_PX4Flow.cpp.swp  .sys_ID_test.cpp.swp  .x_roll_test.cpp.swo  .x_roll_test.cpp.swp  FOF_PX4Flow_data_collect_and_pub.cpp  FOF_data_collect_and_pub.cpp  FOF_pub.cpp  FOF_vicon_data_collect_and_pub.cpp  LeafBlowerTest.cpp  arb_takeoff_test.cpp  arb_takeoff_test.cpp~  forward_vel_stop_test.cpp  forward_vel_test.cpp  full_onboard_OF_steering_controller.cpp  main_flight_controller.cpp  main_flight_controller_working.cpp  offb.cpp  offb_hallway_test.cpp  offboard_control_fix.cpp  offboard_test.cpp  old_pub_forward_vel.cpp  position_hold_tuning.cpp  pub_forward_vel.cpp  pub_forward_vel_new.cpp  small_object_avoidance.cpp  small_object_avoidance_PX4Flow.cpp  small_object_avoidance_PX4Flow.cpp~  small_object_avoidance_vicon.cpp  sys_ID_test.cpp  sys_ID_test_backup.cpp  takeoffLanding.cpp  (+1 more)
src/old_scripts/: FOF_data_collect_and_pub.cpp  RC_override_test.cpp  arb_takeoff_test.cpp  data_collect_and_pub.cpp  forward_vel_stop_test.cpp  forward_vel_test.cpp  main_flight_controller.cpp  pub_forward_vel.cpp  small_object_avoidance.cpp  small_object_avoidance_backup.cpp  small_slow_circle.cpp  sys_id_vel.cpp  takeoff_hold_test.cpp  x_roll_test.cpp  x_vel_step_test.cpp  y_vel_step_test.cpp  yaw_rate_step_test.cpp
